// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`schema generation with native protobuf can make GraphQL schema from generated DSLs: schema.graphql 1`] = `
"### This file was generated by Nexus Schema
### Do not make changes to this file directly


type Query {
  ok: Boolean!
}

type TestPrefixIgnoredMessageNotIgnored {
  body: String!
}

input TestPrefixIgnoredMessageNotIgnoredInput {
  body: String!
}

interface TestPrefixInterfaceMessage {
  id: String!
}

input TestPrefixInterfaceMessageInput {
  id: String!
}

enum TestPrefixInterfaceMessageType {
  INNER
  INNER2
}

enum TestPrefixPrefixedEnum {
  PREFIXED_BAR
  PREFIXED_FOO
}

type TestPrefixPrefixedMessage {
  body: String!

  \\"\\"\\"Output only.\\"\\"\\"
  id: String!
  notIgnoredMessage: TestPrefixIgnoredMessageNotIgnored
  partialIgnoreOneof: TestPrefixPrefixedMessagePartialIgnoreOneof
  prefixedEnum: TestPrefixPrefixedEnum
  skipResolver: String!
  squashedMessage: TestPrefixPrefixedMessageSquashedMessage
  squashedMessages: [TestPrefixPrefixedMessageSquashedMessage]
  thisFieldWasRenamed: String!
}

type TestPrefixPrefixedMessageInnerMessage {
  body: String!
  id: String!
}

type TestPrefixPrefixedMessageInnerMessage2 {
  body: String!
  id: String!
}

input TestPrefixPrefixedMessageInnerMessage2Input {
  body: String!
  id: String!
}

input TestPrefixPrefixedMessageInnerMessageInput {
  body: String!
  id: String!
}

input TestPrefixPrefixedMessageInput {
  body: String!
  notIgnoredMessage: TestPrefixIgnoredMessageNotIgnoredInput
  oneofNotIgnoredField: TestPrefixPrefixedMessageInnerMessageInput
  prefixedEnum: TestPrefixPrefixedEnum
  skipResolver: String!
  squashedMessage: TestPrefixPrefixedMessageSquashedMessageInput
  squashedMessages: [TestPrefixPrefixedMessageSquashedMessageInput]
  thisFieldWasRenamed: String!
}

union TestPrefixPrefixedMessagePartialIgnoreOneof = TestPrefixPrefixedMessageInnerMessage

union TestPrefixPrefixedMessageSquashedMessage = TestPrefixPrefixedMessageInnerMessage | TestPrefixPrefixedMessageInnerMessage2

input TestPrefixPrefixedMessageSquashedMessageInput {
  oneofField: TestPrefixPrefixedMessageInnerMessageInput
  oneofField2: TestPrefixPrefixedMessageInnerMessage2Input
}
"
`;

exports[`schema generation with native protobuf squashed union 1`] = `
Object {
  "data": Object {
    "test": Object {
      "squashedMessage": Object {
        "body": "field 2",
      },
    },
  },
}
`;

exports[`schema generation with protobufjs can make GraphQL schema from generated DSLs: schema.graphql 1`] = `
"### This file was generated by Nexus Schema
### Do not make changes to this file directly


type Query {
  ok: Boolean!
}

type TestPrefixIgnoredMessageNotIgnored {
  body: String!
}

input TestPrefixIgnoredMessageNotIgnoredInput {
  body: String!
}

interface TestPrefixInterfaceMessage {
  id: String!
}

input TestPrefixInterfaceMessageInput {
  id: String!
}

enum TestPrefixInterfaceMessageType {
  INNER
  INNER2
}

enum TestPrefixPrefixedEnum {
  PREFIXED_BAR
  PREFIXED_FOO
}

type TestPrefixPrefixedMessage {
  body: String!

  \\"\\"\\"Output only.\\"\\"\\"
  id: String!
  notIgnoredMessage: TestPrefixIgnoredMessageNotIgnored
  partialIgnoreOneof: TestPrefixPrefixedMessagePartialIgnoreOneof
  prefixedEnum: TestPrefixPrefixedEnum
  skipResolver: String!
  squashedMessage: TestPrefixPrefixedMessageSquashedMessage
  squashedMessages: [TestPrefixPrefixedMessageSquashedMessage]
  thisFieldWasRenamed: String!
}

type TestPrefixPrefixedMessageInnerMessage implements TestPrefixInterfaceMessage {
  body: String!
  id: String!
  skipResolver: String!
}

type TestPrefixPrefixedMessageInnerMessage2 implements TestPrefixInterfaceMessage {
  body: String!
  id: String!
}

input TestPrefixPrefixedMessageInnerMessage2Input {
  body: String!
  id: String!
}

input TestPrefixPrefixedMessageInnerMessageInput {
  body: String!
  id: String!
}

input TestPrefixPrefixedMessageInput {
  body: String!
  notIgnoredMessage: TestPrefixIgnoredMessageNotIgnoredInput
  oneofNotIgnoredField: TestPrefixPrefixedMessageInnerMessageInput
  prefixedEnum: TestPrefixPrefixedEnum
  skipResolver: String!
  squashedMessage: TestPrefixPrefixedMessageSquashedMessageInput
  squashedMessages: [TestPrefixPrefixedMessageSquashedMessageInput]
  thisFieldWasRenamed: String!
}

union TestPrefixPrefixedMessagePartialIgnoreOneof = TestPrefixPrefixedMessageInnerMessage

union TestPrefixPrefixedMessageSquashedMessage = TestPrefixPrefixedMessageInnerMessage | TestPrefixPrefixedMessageInnerMessage2

input TestPrefixPrefixedMessageSquashedMessageInput {
  oneofField: TestPrefixPrefixedMessageInnerMessageInput
  oneofField2: TestPrefixPrefixedMessageInnerMessage2Input
}
"
`;

exports[`schema generation with protobufjs can make GraphQL schema from generated DSLs: schema.graphql 2`] = `
"### This file was generated by Nexus Schema
### Do not make changes to this file directly


type Query {
  ok: Boolean!
}

type TestPrefixIgnoredMessageNotIgnored {
  body: String!
}

input TestPrefixIgnoredMessageNotIgnoredInput {
  body: String!
}

interface TestPrefixInterfaceMessage {
  id: String!
}

input TestPrefixInterfaceMessageInput {
  id: String!
}

enum TestPrefixInterfaceMessageType {
  INNER
  INNER2
}

enum TestPrefixPrefixedEnum {
  PREFIXED_BAR
  PREFIXED_FOO
}

type TestPrefixPrefixedMessage {
  body: String!

  \\"\\"\\"Output only.\\"\\"\\"
  id: String!
  notIgnoredMessage: TestPrefixIgnoredMessageNotIgnored
  partialIgnoreOneof: TestPrefixPrefixedMessagePartialIgnoreOneof
  prefixedEnum: TestPrefixPrefixedEnum
  skipResolver: String!
  squashedMessage: TestPrefixPrefixedMessageSquashedMessage
  squashedMessages: [TestPrefixPrefixedMessageSquashedMessage]
  thisFieldWasRenamed: String!
}

type TestPrefixPrefixedMessageInnerMessage {
  body: String!
  id: String!
  skipResolver: String!
}

type TestPrefixPrefixedMessageInnerMessage2 {
  body: String!
  id: String!
}

input TestPrefixPrefixedMessageInnerMessage2Input {
  body: String!
  id: String!
}

input TestPrefixPrefixedMessageInnerMessageInput {
  body: String!
  id: String!
}

input TestPrefixPrefixedMessageInput {
  body: String!
  notIgnoredMessage: TestPrefixIgnoredMessageNotIgnoredInput
  oneofNotIgnoredField: TestPrefixPrefixedMessageInnerMessageInput
  prefixedEnum: TestPrefixPrefixedEnum
  skipResolver: String!
  squashedMessage: TestPrefixPrefixedMessageSquashedMessageInput
  squashedMessages: [TestPrefixPrefixedMessageSquashedMessageInput]
  thisFieldWasRenamed: String!
}

union TestPrefixPrefixedMessagePartialIgnoreOneof = TestPrefixPrefixedMessageInnerMessage

union TestPrefixPrefixedMessageSquashedMessage = TestPrefixPrefixedMessageInnerMessage | TestPrefixPrefixedMessageInnerMessage2

input TestPrefixPrefixedMessageSquashedMessageInput {
  oneofField: TestPrefixPrefixedMessageInnerMessageInput
  oneofField2: TestPrefixPrefixedMessageInnerMessage2Input
}
"
`;

exports[`schema generation with protobufjs implement skipResolver field 1`] = `
Object {
  "data": Object {
    "test": Object {
      "squashedMessage": Object {
        "skipResolver": "implemented",
      },
    },
  },
}
`;

exports[`schema generation with protobufjs interface 1`] = `
Object {
  "data": Object {
    "test": Object {
      "interfaceMessage": Object {
        "body": "inner message2",
      },
    },
  },
}
`;

exports[`schema generation with protobufjs squashed union 1`] = `
Object {
  "data": Object {
    "test": Object {
      "squashedMessage": Object {
        "body": "field 2",
      },
    },
  },
}
`;
